| Bug #36499 | Maria: potential deadlock | ||
|---|---|---|---|
| Submitted: | 5 May 2008 8:33 | Modified: | 26 Aug 2008 12:34 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Any |
| Assigned to: | CPU Architecture: | Any | |
[26 Aug 2008 12:34]
Michael Widenius
Fixed by introducing another mutex to handle key_del list
[26 Oct 2008 22:20]
Bugs System
Pushed into 6.0.8-alpha (revid:monty@mysql.com-20080826123457-owryg38om3hspr9l) (version source revid:guilhem@mysql.com-20081020191322-i0e65e3k8044kkce) (pib:5)

Description: See this comment in write_hook_for_undo_key() (storage/maria/ma_key_recover.c): /** @todo BUG so we have log mutex and then intern_lock. While in checkpoint we have intern_lock and then log mutex, like when we flush bitmap (flushing bitmap pages can call hook which takes log mutex). So we can deadlock. Another one is that in translog_assign_id_to_share() we have intern_lock and then log mutex. */ How to repeat: Triggering the deadlock in practice is quite hard, but in theory it can happen.